Image Distortion Fix with Foundation

--- a/mediaswipe.css
+++ b/mediaswipe.css
@@ -1,4 +1,4 @@
-/* MediaSwipe by Eric Winterstine v.2.03.2017
+/* MediaSwipe by Eric Winterstine v.06.19.2017
    ------------------------------------------- */
 body.ms-prevent-scroll { 
 	overflow:hidden !important; 
@@ -248,6 +248,8 @@ body.ms-prevent-scroll {
 }
 #mediaswipe-container .mediaswipe-slide-container img {
 	display: block;
+	max-width: inherit;
+	max-height: inherit;
 	user-drag: none; 
 	user-select: none;
 	-moz-user-select: none;
